# py-file-versioning

./: .flake8  Makefile  README.md  create-demo.py  get_project_name.py  pyproject.toml  test_cli_integration.py
src/py_file_versioning/: __init__.py  _internal.py  pyfileversioning.py  versioning.py
tests/: test_internal.py  test_pyfileversioning.py  test_versioning.py
