[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-file-versioning"
dynamic = ["version"]
description = "A flexible file versioning system with compression support"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "John Taylor", email = "jftuga@users.noreply.github.com"},
]
keywords = [
    "backup",
    "versioning",
    "file-management",
    "file-history",
    "version-control",
    "file-backup"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "ruff>=0.9.2",
    "build>=1.0.3",
    "twine>=4.0.2",
]

[project.urls]
Homepage = "https://github.com/jftuga/py-file-versioning"
Repository = "https://github.com/jftuga/py-file-versioning.git"
Issues = "https://github.com/jftuga/py-file-versioning/issues"

[project.scripts]
pyfileversioning = "py_file_versioning.pyfileversioning:main"

[tool.hatch.version]
path = "src/py_file_versioning/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/py_file_versioning"]

[tool.black]
line-length = 140
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 140

[tool.pytest.ini_options]
addopts = "--cov=py_file_versioning --cov-report=term-missing"
